--- a/scrollytelly/css/visualisation.css
+++ b/scrollytelly/css/visualisation.css
@@ -29,9 +29,10 @@
     position: relative;
     display: inline-block;
     width: 400px;
-    top: 200px;
+    top: 100px;
     z-index: 90;
     padding-bottom: 200px;
+    left: 10%
   }
   
   .step {
