--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -28,7 +28,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: url('resources/landing_pic.jpeg');
+  background-image: url('../resources/landing_pic.jpeg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
