--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -60,19 +60,6 @@ body {
   animation: moveText 5s ease-in-out infinite;
 }
 
-/* Keyframes for text animation */
-@keyframes moveText {
-  0% {
-      transform: translateY(0);
-  }
-  50% {
-      transform: translateY(-20px); /* Adjust this value to control the vertical movement */
-  }
-  100% {
-      transform: translateY(0);
-  }
-}
-
 .landing-section h1 {
   font-size: 3rem;
   margin-bottom: 20px;
@@ -83,17 +70,21 @@ body {
   margin-bottom: 30px;
 }
 
-.btn-primary {
-  background-color: #ff9d00;
-  border-color: #ff9d00;
+.btn-blue {
+  background-color: #0f58ace3;
+  color: #e0e1dd;
+  padding: 1.2%;
+  border-radius: 15px;
   z-index: 3;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
   font-size: 1.2rem; /* Slightly larger button text */
+  font-weight: bold;
 }
 
-.btn-primary:hover {
-  background-color: #e69200;
-  border-color: #e69200;
+.btn-blue:hover {
+  background-color: #2375d3e3;
+  color: #e0e1dd;
+  text-decoration: none;
 }
 
 /* Quotes Section */
@@ -217,6 +208,20 @@ body {
   .trending-scams-section h2 {
       font-size: 2rem;
   }
+}
+
+.intro-title {
+  /* font-family: 'comic sans ms', cursive; */
+  font-weight: bolder;
+  font-size: 1.5rem;
+  text-transform: uppercase;
+  padding-bottom: 2%;
+}
+
+.intro-body {
+  font-weight: bold;
+  font-size: 1.5rem;
+  padding-bottom: 1%;
 }
 
 /* Trending scams */
